--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -34,7 +34,7 @@
 
     --font-main: "Nunito";
     --p-vertical: 4rem;
-    --p-lateral: 2rem;
+    --p-lateral: 15px;
 
     /* color-scheme: light dark; */
     font-synthesis: none;
@@ -93,11 +93,11 @@ html {
     @media screen and (max-width: 480px) {
         font-size: 56.5%;
     }
-    @media screen and (max-height: 600px) {
+    /* @media screen and (max-height: 600px) {
         @media screen and (max-width: 360px) {
             font-size: 52%;
         }
-    }
+    } */
 }
 
 body, #root {
@@ -123,7 +123,7 @@ body, input, textarea, button, select, a {
 
 
 [disabled] {
-    opacity: 0.6;
+    opacity: 0.5;
     cursor: not-allowed;
 }
 /* label:has(+[required])::after {
