feat: create form upload photos (form 3) + component NavBar

--- a/frontend/src/components/Modals/ModalPhoto/modalphoto.css
+++ b/frontend/src/components/Modals/ModalPhoto/modalphoto.css
@@ -29,7 +29,7 @@
         background-color: var(--color-bg-2);
         width: 100%;
         max-width: 48rem;
-        padding: 1.5rem 1rem;
+        padding: 2rem;
         border-radius: 13px;
     }
 }
