feat: logout + get myProfile + update Photos (falta alguns pre-preenchimnetos + validação)

--- a/frontend/src/pages/forms/style.css
+++ b/frontend/src/pages/forms/style.css
@@ -6,7 +6,9 @@
 
 .PageContent.FormsContent {
     /* background-color: yellow; */
-    padding-bottom: 7.5rem;
+    &:has(.btns_container) {
+        padding-bottom: 10rem;
+    }
 
     .content_main {
 
