--- a/frontend/src/components/NavBar/navbar.css
+++ b/frontend/src/components/NavBar/navbar.css
@@ -59,12 +59,13 @@
                     justify-content: center; */
                     /* background-color: red; */
                     width: 100%;
-                    min-width: 3rem;
                     max-width: 3.5rem;
+                    min-width: 3.5rem;
                     height: 3.5rem;
                     
                     img {
                         object-fit: cover;
+                        max-width: 100%;
                         height: 100%;
                         border-radius: 50%;
                     }
