--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -109,7 +109,7 @@ body {
     color: var(--color-text);
 
     overflow-x: hidden;
-    /* overflow-y: hidden; */
+    overflow-y: hidden;
 }
 body, input, textarea, button, select, a {
     font-size: 1.6rem; /* Pra garantir q o padrao seja 16px no navegador*/
