--- a/frontend/src/components/Modals/ModalPhoto/DeletePhoto/deletephoto.css
+++ b/frontend/src/components/Modals/ModalPhoto/DeletePhoto/deletephoto.css
@@ -1,7 +1,7 @@
 .WindowConfirm {
     background-color: pink;
     width: 100%;
-    max-width: fit-content;
+    max-width: 32rem;
 
     border: .2rem solid var(--color-w);
     border-radius: 22px;
@@ -18,13 +18,14 @@
         img {
             border-radius: 20px 20px 0 0;
             max-width: 100%;
-            height: 60dvh;
-            min-height: 35rem;
-            max-height: 70rem;
+            height: auto;
+            /* min-height: 35rem; */
+            /* max-height: 70rem; */
         }
         .preview {
             position: absolute;
-            width: 100%;
+            /* width: 100%; */
+            max-width: 100%;
             height: 100%;
             object-fit: cover;
         }
