--- a/frontend/src/components/Modals/ModalPhoto/modalphoto.css
+++ b/frontend/src/components/Modals/ModalPhoto/modalphoto.css
@@ -6,7 +6,7 @@
     z-index: 10;
     width: 100%;
     height: 100%;
-    padding: 2.5rem 15px;
+    padding: 2.5rem 40rem;
 
     display: flex;
     flex-direction: column;
