--- a/frontend/src/components/NavBar/navbar.css
+++ b/frontend/src/components/NavBar/navbar.css
@@ -15,6 +15,8 @@
 
         padding: 1rem var(--p-lateral);
 
+        height: 7.5rem;
+
         .nav_left,
         .nav_right {
             /* background-color: aqua; */
@@ -31,8 +33,8 @@
                 align-items: center;
     
                 img {
-                    min-width: 11rem;
-                    max-height: 3.5rem;
+                    min-width: 10rem;
+                    /* max-height: 3.5rem; */
                 }
             }
         }
