--- a/frontend/src/pages/home/style.css
+++ b/frontend/src/pages/home/style.css
@@ -1,5 +1,5 @@
 .Page {
-    border: 3px solid red;
+    border: 3px solid yellowgreen;
     min-height: 100vh;
     min-height: 100dvh;
 
@@ -11,13 +11,73 @@
 .PageContent {
     /* border: 1px solid blue; */
     flex: 1;
+
+    display: flex;
+    flex-direction: column;
     padding: var(--p-vertical) var(--p-lateral);
+    
+    .feedback_content {
+        /* border: 2px solid black; */
+        flex: 1;
+        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+
+        color: var(--color-primary);
+    }
 }
 
 
 .HomeContent {
+    border: 3px solid red;
+    padding-top: 2rem;
+    padding-bottom: 8rem;
 
-    .persons {
+    .container_persons {
+        border: 3px solid orange;
+        padding: 0 3rem;
+
+        .limit_card {
+            position: relative;
+
+            .card_person {
+                border: 3px solid purple;
+                position: absolute;
+                top: 0;
+                width: 100%;
+    
+                .photo {
+                    background-color: chartreuse;
+                    position: relative;
+                    /* line-height: 0;  OU */
+                    display: flex;
+    
+                    img {
+                        max-width: 100%;
+                    }
+                    .preview {
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+
+                        object-fit: cover;
+                    }
+    
+                }
+            }
+            .card_person.fixed {
+                outline: 4px solid yellow;
+                position: static;
+            }
+        }
+        
+        
+    }
+
+    /* .persons {
         border: 1px solid black;
         position: relative;
         display: flex;
@@ -43,6 +103,6 @@
         .msg {
             position: absolute;
         }
-    }
+    } */
     
 }
