--- a/frontend/src/styles/elements.css
+++ b/frontend/src/styles/elements.css
@@ -1,10 +1,7 @@
-body:has(.Modal) {
+#root:has(.Modal) {
     overflow-y: hidden;
 }
-/* body:has(.PreviewCart) {
-    overflow-y: hidden;
-}
-body:has(.Checkout) {
+/* body:has(.Checkout) {
     background-color: var(--color-secundary);
 } */
 
@@ -23,7 +20,7 @@ body:has(.Checkout) {
     /* background-color: aqua; */
 }
 
-.name-profile {
+.name_profile {
     text-transform: capitalize;
 }
 /* TIPOGRAFIA-FIM */
@@ -80,6 +77,33 @@ body:has(.Checkout) {
     box-sizing: border-box;
     animation: rotation 1s linear infinite;
 }
+
+
+.loader_home {
+    width: 18rem;
+    height: 18rem;
+    display: inline-block;
+    position: relative;
+
+    &::after,
+    &::before {
+        content: '';  
+        width: 18rem;
+        height: 18rem;
+        border-radius: 50%;
+        border: 0.4rem solid var(--color-primary);
+        opacity: 0;
+        position: absolute;
+        left: 0;
+        top: 0;
+        animation: animloader 2s linear infinite;
+    }
+    &::after {
+        animation-delay: 1s;
+    }
+}
+
+
 .loading_route {
     min-height: 100vh;
     min-height: 100dvh;
@@ -415,6 +439,17 @@ body:has(.Checkout) {
     }
     100% {
         transform: rotate(360deg);
+    }
+}
+
+@keyframes animloader {
+    0% {
+        transform: scale(0);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 0;
     }
 }
 /* ANIMATIONS-FIM */
