--- a/frontend/src/pages/home/style.css
+++ b/frontend/src/pages/home/style.css
@@ -1,5 +1,5 @@
 .Page {
-    border: 3px solid yellowgreen;
+    border: 3px solid yellow;
     min-height: 100vh;
     min-height: 100dvh;
 
@@ -25,16 +25,21 @@
         align-items: center;
         justify-content: center;
         gap: 2rem;
-
-        color: var(--color-primary);
     }
 }
 
 
+.Home {
+    border: 3px solid rgb(38, 198, 247);
+    height: 100dvh;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 .HomeContent {
     border: 3px solid red;
     padding-top: 2rem;
-    padding-bottom: 8rem;
+    padding-bottom: 9rem;
 
     .container_persons {
         border: 3px solid orange;
@@ -45,17 +50,20 @@
 
             .card_person {
                 border: 3px solid purple;
+                border-radius: 25px;
                 position: absolute;
                 top: 0;
                 width: 100%;
     
                 .photo {
                     background-color: chartreuse;
+                    border-radius: 22px;
                     position: relative;
                     /* line-height: 0;  OU */
                     display: flex;
     
                     img {
+                        border-radius: 22px;
                         max-width: 100%;
                     }
                     .preview {
@@ -67,42 +75,64 @@
                     }
     
                 }
+                .details {
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    border-radius: 0 0 22px 22px;
+
+                    width: 100%;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    gap: 1rem;
+
+                    
+                    background: #000000;
+                    background: linear-gradient(0deg, #00000036 46%, #00000021 85%, #00000000 100%);
+                    padding: 1.5rem;
+                    
+                    color: var(--color-w);
+                    user-select: none; /* Impede a seleção do texto */
+                    cursor: pointer;
+
+                    > p {
+                        font-size: 2rem;
+                        white-space: nowrap;
+                    }
+                    .name_age {
+                        display: flex;
+                        font-size: 2.2rem;
+
+                        .name_profile {
+                            display: inline-block;
+                            font-weight: 800;
+                            width: 100%;
+                            max-width: 18rem;
+                            
+                            text-overflow: ellipsis;
+                            overflow: hidden;
+                            white-space: nowrap;
+                        }
+                    }
+                    .txt_link {
+                        text-decoration: underline;
+                    }
+                }
             }
             .card_person.fixed {
                 outline: 4px solid yellow;
                 position: static;
             }
         }
-        
-        
     }
 
-    /* .persons {
-        border: 1px solid black;
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
 
-        .card {
-            width: 100%;
+    &:has(.InfoUser) {
+        padding-bottom: 11rem;
 
-            img {
-                max-width: 100%;
-            }
+        .container_persons {
+            padding: 0;
         }
-        .card.fixed {
-            visibility: hidden;
-        }
-        .card.person {
-            background-color: var(--color-w);
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-        .msg {
-            position: absolute;
-        }
-    } */
-    
+    }    
 }
