feat: componente InfoUser ok

--- a/frontend/src/components/ActionsBottom/actionsbottom.css
+++ b/frontend/src/components/ActionsBottom/actionsbottom.css
@@ -2,7 +2,7 @@
 /* @import "@radix-ui/colors/violet.css"; */
 
 .ActionsBottom {
-	border: 2px solid aquamarine;	
+	border: 2px solid aqua;	
 	background: rgb(234,225,242);
 	background: linear-gradient(0deg, rgba(234,225,242,1) 46%, rgba(234,225,242,0.7455357142857143) 80%, rgba(234,225,242,0.3981967787114846) 100%);
 
