--- a/frontend/src/pages/home/style.css
+++ b/frontend/src/pages/home/style.css
@@ -37,26 +37,26 @@
 }
 
 .HomeContent {
-    border: 3px solid red;
+    /* border: 3px solid red; */
     padding-top: 2rem;
     padding-bottom: 9rem;
 
     .container_persons {
-        border: 3px solid orange;
+        /* border: 3px solid orange; */
         padding: 0 3rem;
 
         .limit_card {
             position: relative;
 
             .card_person {
-                border: 3px solid purple;
+                border: 3px solid var(--color-border);
                 border-radius: 25px;
                 position: absolute;
                 top: 0;
                 width: 100%;
     
                 .photo {
-                    background-color: chartreuse;
+                    background-color: var(--color-b);
                     border-radius: 22px;
                     position: relative;
                     /* line-height: 0;  OU */
