C:/Program Files/Git/forms + /login feitos

--- a/frontend/src/components/ActionsBottom/actionsbottom.css
+++ b/frontend/src/components/ActionsBottom/actionsbottom.css
@@ -3,8 +3,8 @@
 
 .ActionsBottom {
 	border: 2px solid aqua;	
-	background: rgb(234,225,242);
-	background: linear-gradient(0deg, rgba(234,225,242,1) 46%, rgba(234,225,242,0.7455357142857143) 80%, rgba(234,225,242,0.3981967787114846) 100%);
+	background: #eae1f2;
+	background: linear-gradient(0deg, #eae1f2 46%, #eae1f2be 80%, #eae1f265 100%);
 
 	display: flex;
 	justify-content: center;
