--- a/frontend/src/components/InfoUser/infouser.css
+++ b/frontend/src/components/InfoUser/infouser.css
@@ -140,6 +140,10 @@
             .label--input {
                 gap: .3rem;
 
+                label {
+                    cursor: initial;
+                }
+
                 .habits {
                     display: flex;
                     flex-wrap: wrap;
