--- a/frontend/src/pages/forms/style.css
+++ b/frontend/src/pages/forms/style.css
@@ -5,10 +5,13 @@
 }
 
 .PageContent.FormsContent {
-    /* background-color: yellow; */
+    /* background-color: rgba(255, 255, 0, 0.164); */
+    gap: 2.5rem;
+    
     &:has(.btns_container) {
         padding-bottom: 10rem;
     }
+
 
     .content_main {
 
@@ -16,7 +19,7 @@
             /* border: 2px solid red; */
             display: flex;
             flex-direction: column;
-            gap: 3.5rem;
+            gap: 3rem;
 
 
             .label--input {
@@ -39,108 +42,11 @@
                         flex: none;
                     }
                 }
-
-                .gender_optional {
-                    margin-top: .5rem;
-                    background-color: var(--color-neutral-border);
-                    border-radius: 10px;
-                    padding: 1rem;
-                    
-                    .top_select {
-                        cursor: pointer;
-                    }
-    
-                    .list_gender_optional {
-                        margin-top: 1rem;
-                        display: flex;
-                        flex-direction: column;
-                        gap: .7rem;
-                        overflow: auto;
-
-                        height: 100%;
-                        max-height: 37rem;
-    
-                        transition: all .4s ease;
-    
-                        .item {
-                            cursor: pointer;
-                            background-color: white;
-                            border: 1px solid rgba(0, 0, 0, 0.404);
-                            border-radius: 5px;
-                            padding: .5rem;
-
-                            line-height: 110%;
-
-                            transition: all .3s ease;
-
-                            &.checked {
-                                background-color: palevioletred;
-                                color: var(--color-w);
-                            }
-                        }
-                    }
-                    .list_gender_optional.hide {
-                        margin-top: 0rem;
-                        max-height: 0;
-                    }
-                }
             }
             .label--input.habits {
                 > label {
                     display: flex;
                     justify-content: space-between;
-                }
-            }
-
-            .select {
-                background-color: var(--color-bg-2);
-                border: 1px solid var(--color-text);
-                border-radius: 7px;
-                padding: .5rem;
-
-                .top_select {
-                    /* background-color: aqua; */
-                    cursor: pointer;
-
-                    display: flex;
-                    justify-content: space-between;
-                }
-
-                .list_select {
-                    display: flex;
-                    flex-direction: column;
-                    gap: .7rem;
-                    overflow-y: auto;
-                    height: 100%;
-                    max-height: 0;
-                    /* max-width: 49rem; */
-                    transition: all .4s ease-in-out;
-
-                    .item_select {
-                        /* opacity: 0; */
-                        cursor: pointer;
-                        background-color: var(--color-w);
-                        border: 1px solid rgba(0, 0, 0, 0.404);
-                        border-radius: 5px;
-                        padding: .5rem;
-                        line-height: 110%;
-                        
-                        transition: all .3s ease-in-out;
-                        
-                        &.checked {
-                            background-color: palevioletred;
-                            color: var(--color-w);
-                        }
-                    }
-                }
-                .list_select.show {
-                    padding-top: 1rem;
-                    padding-bottom: 1rem;
-                    max-height: 25rem;
-
-                    /* .item_select {
-                        opacity: 1;
-                    } */
                 }
             }
 
@@ -156,6 +62,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                gap: .7rem;
                 /* text-align: center; */
 
                 p {
@@ -166,6 +73,7 @@
                 }
 
                 .input_photo {
+                    background-color: var(--color-bg-2);
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -173,18 +81,22 @@
                     position: relative;
                     max-width: 18rem;
 
-                    border: 2px solid black;
-                    border-radius: 15px;
+                    border: .2rem solid var(--color-border);
+                    border-radius: 20px;
+                    box-shadow: .1rem .1rem var(--color-border);
                     cursor: pointer;
 
                     img {
-                        border-radius: 13px;
+                        border-radius: 18px;
                         max-width: 100%;
+                        opacity: 0.6;
+                        mix-blend-mode: darken;
                     }
                     .preview {
                         position: absolute;
                         width: 100%;
                         height: 100%;
+                        mix-blend-mode: normal;
                         object-fit: cover;
                     }
                     i {
@@ -201,15 +113,28 @@
 
 
             .btns_container {
-                background-color: aquamarine;
-                padding: 1rem 0;
+                background: #eae1f2;
+	            background: linear-gradient(0deg, #eae1f2 46%, #eae1f2be 80%, #eae1f265 100%);
+                padding: 1rem 2rem;
                 position: absolute;
                 bottom: 0;
                 left: 0;
 
                 width: 100%;
+
+                .btn {
+                    max-width: 520px;
+                }
             }
         }
         
+    }
+
+
+    
+    /* Excessoes de estilos */
+    .feedback_content {
+        /* background-color: aqua; */
+        transform: translateY(-4rem);
     }
 }
