--- a/frontend/src/components/InfoUser/infouser.css
+++ b/frontend/src/components/InfoUser/infouser.css
@@ -2,6 +2,7 @@
     /* background-color: #ff000034; */
     
     .title {
+        margin-bottom: 0.5rem;
 
         .name_profile {
             font-weight: 800;
