--- a/frontend/src/components/Match/match.css
+++ b/frontend/src/components/Match/match.css
@@ -6,16 +6,106 @@
     z-index: 10;
     width: 100%;
     height: 100%;
-    padding: 2.5rem 4rem;
+    padding: 2.5rem var(--p-lateral);
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
-    background-color: #000000c4;
+    background-color: #000000b9;
+    -webkit-backdrop-filter: blur(18px);
+    backdrop-filter: blur(18px);
 
     .main {
-        background-color: black;
+        /* background-color: black; */
+        margin-top: -2rem;
+        
+        width: 100%;
+        max-width: 520px;
+        color: var(--color-w);
+        text-align: center;
+
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+
+
+        .top {
+            padding: 2rem 3rem;
+            align-self: flex-end;
+            margin-bottom: 1rem;
+
+            button {
+                background-color: transparent;
+                line-height: 0;
+                font-size: 3rem;
+                color: var(--color-w);
+            }
+        }
+
+        .content {
+            /* border: 1px solid burlywood; */
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+
+
+            /* .title {
+                color: aqua;
+            } */
+
+            .pair_photos {
+                /* border: 2px solid red; */
+                display: flex;
+                justify-content: center;
+
+                .photo {
+                    /* background-color: yellow; */
+                    width: 19rem;
+                    height: 19rem;
+                    border-radius: 50%;
+                    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.527);
+
+                    display: flex;
+
+                    &.your_match {
+                        /* background-color: aqua; */
+                        margin-left: -3.5rem;
+                    }
+                    
+                    img {
+                        max-width: 100%;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
+                }
+            }
+            
+            .sub_title {
+                opacity: 0.8;
+                font-size: 1.8rem;
+                font-weight: 500;
+            }
+        }
+
+        .actions {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 5rem;
+
+            .btn {
+                background-color: transparent;
+                border: none;
+                color: var(--color-w);
+                font-size: 1.8rem;
+
+                &.message {
+                    background-color: var(--color-tertiary);
+                    color: var(--color-primary);
+                }
+            }
+        }
     }
 }
